# A-raytracer-in-python

./: .gitignore  Dockerfile  README.md  chapter8-intermediate.ppm  chapter8.ppm  earth_rendering.ppm  pyproject.toml
.github/workflows/: tests.yml
imgs/: chapter10-intermediate.ppm  chapter9.ppm
src/: __init__.py  canvas.py  main.py  materials.py  matrix.py  ray.py  shapes.py  tuples.py  world.py
src/api/: main.py
src/assembler/: assemble.py
src/raytracer/: __init__.py  camera.py  canvas.py  lights.py  main.py  materials.py  matrix.py  shapes.py  simple_raytracer.py  transformations.py  tuples.py  world.py
src/worker/: worker.py
tests/: test_camera.py  test_canvas.py  test_lights.py  test_materials.py  test_matrix.py  test_ray.py  test_shapes.py  test_transformations.py  test_tuple.py  test_world.py
