[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "raytracer"
version = "0.1.0"
dependencies = [
    "black>=24.8.0",
    "build>=1.2.1",
    "codecov>=2.1.13",
    "cython>=3.2.1",
    "cython-lint>=0.18.1",
    "ipykernel>=6.29.5",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.33",
    "mkdocstrings>=0.25.2",
    "mkdocstrings-python>=1.10.8",
    "mypy>=1.11.1",
    "mypy-extensions>=1.0.0",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pre-commit>=3.8.0",
    "pyinstrument>=5.1.1",
    "pytest>=8.3.2",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.2",
    "setuptools>=73.0.1",
    "snakeviz>=2.2.2",
    "staticfg>=0.9.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "build>=1.2.1",
    "codecov>=2.1.13",
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "isort>=5.13.2",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.33",
    "mkdocstrings>=0.25.2",
    "mkdocstrings-python>=1.10.8",
    "mypy>=1.11.1",
    "mypy-extensions>=1.0.0",
    "nbqa>=1.8.7",
    "pre-commit>=3.8.0",
    "pygments>=2.18.0",
    "pytest>=8.3.2",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.2",
    "setuptools>=73.0.1",
    "twine>=5.1.0",
    "virtualenv>=20.26.3",
]
